tests/files/flow_controller_tests/should_run/087.cmdr
x = 5;
print sech(x);