tests/files/flow_controller_tests/should_fail/071.cmdr
x = "cat";
print sech(x);